// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleContainer should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <withRouter(ScheduleContainer)
    schedule={
        Array [
            Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 3,
              "name": "Billy Prince Billy",
              "staff": Array [
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Assistant Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bartender",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Barback",
                  "staff_id": null,
                },
              ],
            },
            Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 4,
              "name": "Not Billy Prince Billy",
              "staff": Array [
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Assistant Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bartender",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Barback",
                  "staff_id": null,
                },
              ],
            },
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ScheduleContainer should match the snapshot when there are no unscheduled events 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <withRouter(ScheduleContainer)
    schedule={
        Array [
            Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 3,
              "name": "Billy Prince Billy",
              "staff": Array [
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Assistant Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bartender",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Barback",
                  "staff_id": null,
                },
              ],
            },
            Object {
              "ass_bar_manager": true,
              "bar_manager": true,
              "barbacks": 1,
              "bartenders": 1,
              "date": "Jul 20, 2018",
              "event_id": 4,
              "name": "Not Billy Prince Billy",
              "staff": Array [
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Assistant Bar Manager",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Bartender",
                  "staff_id": null,
                },
                Object {
                  "event_id": 3,
                  "name": "Staff Needed",
                  "role": "Barback",
                  "staff_id": null,
                },
              ],
            },
          ]
    }
    type="Unscheduled Events"
    unscheduledEvents={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
